--- a/assets/less/tests/navbar-static-top.html
+++ b/assets/less/tests/navbar-static-top.html
@@ -39,9 +39,7 @@
       <div class="navbar-inner">
         <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
+            <i class="fa fa-bars"></i>
           </a>
           <a class="brand" href="#">Project name</a>
           <div class="nav-collapse collapse">
