Moved more burntfen.net to burntfen.com #12

--- a/comic/index.html
+++ b/comic/index.html
@@ -47,7 +47,7 @@
             <a href="http://www.burntfen.com/comic/merch/index.html">The Merch Section</a><br />
             <a href="http://www.burntfen.net/poetry/index.html">Poetry</a> &
             <a href="http://www.burntfen.net/prose/index.html">Prose</a> <br />
-            <a href="http://www.burntfen.net/hub.php">The Hub</a><br />
+            <a href="http://www.burntfen.com">The Hub</a><br />
             <a href="http://www.burntfen.com/comic/links.html">Other Comics</a> </p>
 
   </p>
