--- a/comic/minutiae/comment.html
+++ b/comic/minutiae/comment.html
@@ -13,7 +13,7 @@
 <body>
 <center>
 <div class="header">
-<a href=http://www.burntfen.com/comic><img src=http://www.burntfen.net/minutiae/banner2.png /></img></a>
+<a href=http://www.burntfen.com/comic><img src=http://www.burntfen.com/comic/minutiae/banner2.png /></img></a>
 </div>
 
 <p>
@@ -30,7 +30,7 @@
 </div>
 <!-- END CBOX -->
 <br />
- . . . <a href="http://www.burntfen.net/index.html">Back</a> . . .<br />
+ . . . <a href="http://www.burntfen.com/comic/">Back</a> . . .<br />
 <br />
 
 
