--- a/test.html
+++ b/test.html
@@ -3,15 +3,12 @@
 <title>Test</title>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script>
-  $(function() {
-      $(".phonecell").click(function(){
-          var PhoneNumber = $(this).text();
-          PhoneNumber=PhoneNumber.replace("Phone:","");
-          window.location.href="tel://"+PhoneNumber;
-      });
-  });
-  </script>
+  (function() {
+    var PhoneNumber = '+1347784660'
+    window.location.href="tel://"+PhoneNumber;
+  })()
+</script>
   </head>
   <body>
-  <table><tr><td class=phonecell>Phone: 347 784 6660</td></tr></table>
+  Nothing to see here.
   </body>
