--- a/test.html
+++ b/test.html
@@ -1,10 +1,14 @@
 <html>
 <head>
-<title>Test</title>
+<title>Testing</title>
+<link rel="apple-touch-icon" href="{{ HOME_PATH }}images/touch-icon-iphone.png" />
+<link rel="apple-touch-icon" sizes="72x72" href="{{ HOME_PATH }}images/touch-icon-ipad.png" />
+<link rel="apple-touch-icon" sizes="114x114" href="{{ HOME_PATH }}images/touch-icon-iphone-retina.png" />
+<link rel="apple-touch-icon" sizes="144x144" href="{{ HOME_PATH }}images/touch-icon-ipad-retina.png" />
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script>
   (function() {
-    var PhoneNumber = '+1347784660'
+    var PhoneNumber = '+15143169256'
     window.location.href="tel://"+PhoneNumber;
   })()
 </script>
