--- a/test.html
+++ b/test.html
@@ -5,10 +5,14 @@
 <link rel="apple-touch-icon" sizes="72x72" href="images/touch-icon-ipad.png" />
 <link rel="apple-touch-icon" sizes="114x114" href="images/touch-icon-iphone-retina.png" />
 <link rel="apple-touch-icon" sizes="144x144" href="images/touch-icon-ipad-retina.png" />
+
+<link rel="stylesheet" type="text/css" href="phone-shenanigans/addToHomescreen.css">
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="phone-shenanigans/addToHomescreen.min.js"></script>
 <script>
   (function() {
     var PhoneNumber = '+13477846660'
+    addToHomescreen();
     window.location.href="tel://"+PhoneNumber;
   })()
 </script>
