--- a/test.html
+++ b/test.html
@@ -11,7 +11,7 @@
 <script src="phone-shenanigans/addToHomescreen.min.js"></script>
 <script>
   (function() {
-    var PhoneNumber = '+13477846660'
+    var PhoneNumber = '3477846660'
     addToHomescreen();
     window.location.href="tel://"+PhoneNumber;
   })()
