feat: Make a nicer 404
Closes #54

--- a/404.html
+++ b/404.html
@@ -1,1 +1,12 @@
-Sorry this page does not exist =(
+---
+layout: page
+title: "404"
+description: "404"
+---
+{% include JB/setup %}
+
+<p>I'm sorry, this isn't a page at the moment. Normally, people put something witty here. If there is supposed to be something here, please email me and let me know!</p>
+
+<p>Instead, I am just going to direct you back.</p>
+
+<h1><a href="{{ HOME_PATH }}">Come home</a>.</h1>
