--- a/tags.html
+++ b/tags.html
@@ -6,16 +6,18 @@ group: navigation
 ---
 {% include JB/setup %}
 
+<a href="{{ BASE_PATH }}/archive">Back to the Archive.</a>
+
 <ul class="tag_box inline">
-  {% assign tags_list = site.tags %}  
+  {% assign tags_list = site.tags %}
   {% include JB/tags_list %}
 </ul>
 
 
-{% for tag in site.tags %} 
+{% for tag in site.tags %}
   <h2 id="{{ tag[0] }}-ref">{{ tag[0] }}</h2>
   <ul>
-    {% assign pages_list = tag[1] %}  
+    {% assign pages_list = tag[1] %}
     {% include JB/pages_list %}
   </ul>
 {% endfor %}
