--- a/comic/index.html
+++ b/comic/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
 <meta name="Description" content="The Burnt Fen Maunderings: a new webcomic updated on Moon Days, Woden's Days and Frigg Days, exploring irony, history, linguistics, and bad humor. " />
 <meta name="Keywords" content="Dragon Ash Burnt Burned Fen Fenne Couk Richard Fenn webcomic web comic classics classical Linguistics Greek History latin" />
@@ -7,12 +7,10 @@
 <head>
 <title>The Burnt Fen Webcomic</title>
 <link rel=stylesheet href="marsh.css" type="text/css">
-<link rel="alternate" type="application/rss+xml" title="The Burnt Fen Maunderings" href="http://rsspect.com/rss/burntfenmaunderings.xml" />
 </head>
 <body bgcolor="#FFFFFF">
 <div id="header">
   <center>
-    <! img src="minutiae/banner2.png" alt="banner" width="850" height="75" />
     <img src=https://www.burntfen.com/comic/minutiae/banner2.png /></img>
   </center>
 </div><br />
@@ -52,9 +50,9 @@
 </div>
     <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
 
-      <a href="http://www.facebook.com/#!/group.php?gid=9953041386&ref=ts"><img src="minutiae/fb.png" title="The Facebook Group. Word." border="0" /></a>
-      <a href="http://twitter.com/richfenne"><img src="minutiae/tw.png" title="Twitter it up." border="0" /></a><br />
-            <a href=http://rsspect.com/rss/burntfenmaunderings.xml><img src="minutiae/rssheep.png" width="38" height="38" border="0" title="Click to subscribe to my RSS feed. Powered by RSSPECT.com." alt="This should work now."/></img></a>
+      <a href="httsp://www.facebook.com/#!/group.php?gid=9953041386&ref=ts"><img src="minutiae/fb.png" title="The Facebook Group. Word." border="0" /></a>
+      <a href="https://twitter.com/richfenne"><img src="minutiae/tw.png" title="Twitter it up." border="0" /></a><br />
+            <img src="minutiae/rssheep.png" width="38" height="38" border="0" title="Click to subscribe to my RSS feed. Powered by RSSPECT.com." alt="This is broken now."/></img>
      <input type="hidden" name="cmd" value="_s-xclick">
      <input type="image" src="https://www.burntfen.com/comic/minutiae/paypalsheep.jpg" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
      <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
@@ -63,88 +61,14 @@
     </form>
 </td></tr></table>
 
-<hr/>
-<table border="0" width="100%" cellpadding="0">
-<tr>
-<td width="50%" valign="left">
-<center><a href="https://www.burntfen.com/comic/comment.html"><img src="minutiae/comment.png" title="This is where you say things." alt="This is where you say things." width="102" height="29" border="none" /></a><br /><br /></center>
-<script src="http://widgets.twimg.com/j/2/widget.js"></script>
-<script>
-new TWTR.Widget({
-  version: 2,
-  type: 'profile',
-  rpp: 4,
-  interval: 6000,
-  width: 400,
-  height: 300,
-  theme: {
-    shell: {
-      background: '#ffffff',
-      color: '#003300'
-    },
-    tweets: {
-      background: '#ffffff',
-      color: '#003300',
-      links: '#4aed05'
-    }
-  },
-  features: {
-    scrollbar: false,
-    loop: false,
-    live: false,
-    hashtags: true,
-    timestamp: true,
-    avatars: false,
-    behavior: 'all'
-  }
-}).render().setUser('richfenne').start();
-</script></td><td width="50%" valign="top">
-  <!-- BEGIN CBOX - www.cbox.ws
-</p>
-<iframe frameborder="0" width="400" height="300" src="http://www2.cbox.ws/box/?boxid=1783177&amp;boxtag=bntr5f&amp;sec=main" marginheight="2" marginwidth="2" scrolling="auto" allowtransparency="yes" name="cboxmain" style="border:#B9C8A0 1px solid;" id="cboxmain"></iframe><br/>
-<iframe frameborder="0" width="400" height="75" src="http://www2.cbox.ws/box/?boxid=1783177&amp;boxtag=bntr5f&amp;sec=form" marginheight="2" marginwidth="2" scrolling="no" allowtransparency="yes" name="cboxform" style="border:#B9C8A0 1px solid;border-top:0px" id="cboxform"></iframe>
-</td>
-</tr>
-</table><br /> -->
-<!-- END CBOX -->
-<!-- BEGIN CBOX - www.cbox.ws - v001 -->
-</p><iframe frameborder="0" width="400" height="300" src="http://www3.cbox.ws/box/?boxid=2970723&amp;boxtag=7559&amp;sec=main" marginheight="2" marginwidth="2" scrolling="auto" allowtransparency="yes" name="cboxmain" style="border:#B9C8A0 1px solid;" id="cboxmain"></iframe></div>
-<div><iframe frameborder="0" width="400" height="75" src="http://www3.cbox.ws/box/?boxid=2970723&amp;boxtag=7559&amp;sec=form" marginheight="2" marginwidth="2" scrolling="no" allowtransparency="yes" name="cboxform" style="border:#B9C8A0 1px solid;border-top:0px" id="cboxform"></iframe>
-</td>
-</tr>
-</table><br />
-<!-- END CBOX -->
-
 <hr />
 <center>
-<!--<style type="text/css">
-@import url(http://www.google.com/cse/api/branding.css);
-</style>
-<div class="cse-branding-bottom" style="background-color:#FFFFFF;color:#000000">
-  <div class="cse-branding-form">
-    <form action="https://burntfen.com/comic/index2.html" id="cse-search-box">
-      <div>
-        <input type="hidden" name="cx" value="partner-pub-0804394469422835:gr5nc1-hkm2" />
-        <input type="hidden" name="cof" value="FORID:10" />
-        <input type="hidden" name="ie" value="UTF-8" />
-        <input type="text" name="q" size="31" />
-        <input type="submit" name="sa" value="Search" />
-      </div>
-    </form>
-  </div>
-  <div class="cse-branding-logo">
-    <img src="http://www.google.com/images/poweredby_transparent/poweredby_FFFFFF.gif" alt="Google" />
-  </div>
-  <div class="cse-branding-text">
-    Custom Search
-  </div>
-</div> -->
 
     <font size="1pt">all pages &copy; richard littauer</font> <br />
-  <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/"><img title="This work is licensed under a Creative Commons Attribution-Noncommercial-No Derivative Works 3.0 Unported License." alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-nd/3.0/80x15.png"/></a>
+  <a rel="license" href="https://creativecommons.org/licenses/by-nc-nd/3.0/"><img title="This work is licensed under a Creative Commons Attribution-Noncommercial-No Derivative Works 3.0 Unported License." alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-nd/3.0/80x15.png"/></a>
   </center>
   <script src="https://www.google-analytics.com/urchin.js" type="text/javascript"></script>
-<a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/us/"></a></div>
+<a rel="license" href="https://creativecommons.org/licenses/by-nc-nd/3.0/us/"></a></div>
 <script type="text/javascript">
 _uacct = "UA-4124866-1";
 urchinTracker();
