--- a/comic/index.html
+++ b/comic/index.html
@@ -32,7 +32,7 @@
 <tr>
 <td width="80%" valign="top">
 <div id="blog">
-  <p align="justify"><img src="https://www.burntfen.com/comic/minutiae/skull.png" title="Me - beard." alt="templar" width="150px" align="left" /><span class="rss-content">I now have a new personal website: <a href="../hub.php">the hub.</a> Refer there to links to places where I am actually active. No new comics, currently. Perhaps soon?
+  <p align="justify"><img src="https://www.burntfen.com/comic/minutiae/skull.png" title="Me - beard." alt="templar" width="150px" align="left" /><span class="rss-content">I now have a new personal website: <a href="https://burntfen.com">burntfen.com.</a> Refer there to links to places where I am actually active. No new comics, currently, or probably ever again. This comic is now sufficiently dated and old - read at your own risk.
   </span><br /><br /></p>
 
 </div></td><td width="100px" valign="left" align="center">
